# websocket-fullstack

python-socket-io/: app.py  pyproject.toml
socket-io/: package-lock.json  package.json
socket-io/src/: server.ts
websocket/: package-lock.json  package.json
websocket-front/: next.config.ts  package-lock.json  package.json  tsconfig.json
websocket-front/src/app/: page.tsx
websocket-front/src/app/sentry-example-page/: page.tsx
websocket-front/src/app/socket-io/: page.tsx
websocket-front/src/app/socket-io/[organizationId]/: page.tsx
websocket-front/src/app/websocket/: page.tsx
websocket-front/src/app/websocket/[organizationId]/: page.tsx
websocket-front/src/hooks/: use-chats.ts
websocket-front/src/logger/: logger.js
websocket/src/: server.ts
